# xrt-202420.2.18.179-fc39

./: CMakeLists.txt  README.md
patches-fc39/: xrt-202420.2.18.179.patch
src/: CMakeLists.txt
src/CMake/: nativeLnx.cmake
src/CMake/config/: postinst.in
src/include/1_2/CL/: cl_ext_xilinx.h  cl_ext_xocl.h
src/runtime_src/: CMakeLists.txt
src/runtime_src/aie-rt/driver/src/: CMakeLists.txt
src/runtime_src/aie-rt/driver/src/common/: xaie_helper.c  xaie_helper.h  xaie_helper_internal.h  xaie_txn.h
src/runtime_src/aie-rt/driver/src/core/: xaie_core.c  xaie_core_aie.c  xaie_core_aieml.c  xaie_elfloader.c
src/runtime_src/aie-rt/driver/src/device/: xaie_device_aie.c  xaie_device_aieml.c
src/runtime_src/aie-rt/driver/src/dma/: xaie_dma.c  xaie_dma_aie.c  xaie_dma_aieml.c
src/runtime_src/aie-rt/driver/src/events/: xaie_events.c  xaie_events.h
src/runtime_src/aie-rt/driver/src/global/: xaiegbl.c  xaiegbl.h
src/runtime_src/aie-rt/driver/src/interrupt/: xaie_interrupt_init.c
src/runtime_src/aie-rt/driver/src/io_backend/: xaie_io.h
src/runtime_src/aie-rt/driver/src/io_backend/ext/: xaie_baremetal.c  xaie_cdo.c  xaie_controlcode.c  xaie_debug.c  xaie_ipu.c  xaie_sim.c  xaie_socket.c
src/runtime_src/aie-rt/driver/src/io_backend/privilege/: xaie_io_privilege.c
src/runtime_src/aie-rt/driver/src/lite/: xaie_lite.c  xaie_lite.h  xaie_lite_aie.h  xaie_lite_aieml.h  xaie_lite_regdef_aie2p.h  xaie_lite_regdef_aieml.h
src/runtime_src/aie-rt/driver/src/memory/: xaie_mem.c
src/runtime_src/aie-rt/driver/src/npi/: xaie_npi.c  xaie_npi_aie.c  xaie_npi_aieml.c
src/runtime_src/aie-rt/driver/src/perfcnt/: xaie_perfcnt.c
src/runtime_src/aie-rt/driver/src/pl/: xaie_plif.c
src/runtime_src/aie-rt/driver/src/pm/: xaie_clock.c  xaie_reset.c  xaie_reset_aie.c  xaie_tilectrl.c
src/runtime_src/aie-rt/driver/src/stream_switch/: xaie_ss.c
src/runtime_src/aie-rt/driver/src/timer/: xaie_timer.c
src/runtime_src/aie-rt/driver/src/trace/: xaie_trace.c
src/runtime_src/aie-rt/driver/src/util/: xaie_util_events_aieml.c
src/runtime_src/aie-rt/fal/: CMakeLists.txt
src/runtime_src/aie-rt/fal/src/: CMakeLists.txt
src/runtime_src/aie-rt/fal/src/common/: xaiefal-base.hpp  xaiefal-log.hpp
src/runtime_src/aie-rt/fal/src/profile/: xaiefal-profile.hpp
src/runtime_src/aie-rt/fal/src/rsc/: xaiefal-bc.hpp  xaiefal-events.hpp  xaiefal-groupevent.hpp  xaiefal-pc.hpp  xaiefal-perf.hpp  xaiefal-rsc-base.hpp  xaiefal-rsc-group-impl.hpp  xaiefal-rsc-group.hpp  xaiefal-rscmgr-generic.hpp  xaiefal-rscmgr.hpp  xaiefal-ss.hpp  xaiefal-trace.hpp
src/runtime_src/core/common/aiebu/: .gitignore  CMakeLists.txt  LICENSE  README.rst
src/runtime_src/core/common/aiebu/lib/: CMakeLists.txt  README.rst
src/runtime_src/core/common/aiebu/lib/aie-rt/driver/: CMakeLists.txt.mine.sav
src/runtime_src/core/common/aiebu/lib/aie-rt/driver/src/: CMakeLists.txt
src/runtime_src/core/common/aiebu/lib/aie-rt/driver/src/cmake/: Findcommon.cmake
src/runtime_src/core/common/aiebu/lib/src/: CMakeLists.txt  Makefile  gen-common.h  gen-copy.cpp  gen-preemption.cpp  md5sum.cmake
src/runtime_src/core/common/aiebu/src/cpp/aiebu/: CMakeLists.txt
src/runtime_src/core/common/aiebu/src/cpp/aiebu/src/: CMakeLists.txt
src/runtime_src/core/common/aiebu/src/cpp/aiebu/src/analyzer/: reporter.cpp  reporter.h  transaction.cpp  transaction.hpp
src/runtime_src/core/common/aiebu/src/cpp/aiebu/src/assembler/: aiebu_assembler.cpp  assembler.cpp  assembler.h
src/runtime_src/core/common/aiebu/src/cpp/aiebu/src/common/: aiebu_error.cpp  code_section.h  symbol.h  uid_md5.h  utils.h  writer.cpp  writer.h
src/runtime_src/core/common/aiebu/src/cpp/aiebu/src/common/linux/: uid_md5.h
src/runtime_src/core/common/aiebu/src/cpp/aiebu/src/common/windows/: uid_md5.cpp  uid_md5.h
src/runtime_src/core/common/aiebu/src/cpp/aiebu/src/elf/: elfwriter.cpp  elfwriter.h
src/runtime_src/core/common/aiebu/src/cpp/aiebu/src/elf/aie2/: aie2_blob_elfwriter.h
src/runtime_src/core/common/aiebu/src/cpp/aiebu/src/encoder/: encoder.h
src/runtime_src/core/common/aiebu/src/cpp/aiebu/src/encoder/aie2/: aie2_blob_encoder.h
src/runtime_src/core/common/aiebu/src/cpp/aiebu/src/include/: aiebu.h  aiebu_assembler.h  aiebu_error.h
src/runtime_src/core/common/aiebu/src/cpp/aiebu/src/preprocessor/: preprocessed_output.h  preprocessor.h  preprocessor_input.h
src/runtime_src/core/common/aiebu/src/cpp/aiebu/src/preprocessor/aie2/: aie2_blob_preprocessed_output.h  aie2_blob_preprocessor.h  aie2_blob_preprocessor_input.cpp  aie2_blob_preprocessor_input.h
src/runtime_src/core/common/aiebu/src/cpp/aiebu/utils/: CMakeLists.txt
src/runtime_src/core/common/aiebu/src/cpp/aiebu/utils/asm/: CMakeLists.txt  asm.cpp
src/runtime_src/core/common/aiebu/src/cpp/aiebu/utils/common/: utils.cpp  utils.h
src/runtime_src/core/common/aiebu/test/: CMakeLists.txt
src/runtime_src/core/common/aiebu/test/aie2-ctrlcode/: CMakeLists.txt  checksums.txt
src/runtime_src/core/common/aiebu/test/cpp_test/: CMakeLists.txt
src/runtime_src/core/common/aiebu/test/cpp_test/c_api/: CMakeLists.txt  aie2_test.c  aie_test_common.h
src/runtime_src/core/common/aiebu/test/cpp_test/cpp_api/: CMakeLists.txt  aie2_test.cpp
src/runtime_src/core/common/drv/include/: xrt_cu.h
src/runtime_src/core/pcie/driver/linux/xocl/: xocl_drv.h  xocl_subdev.c
src/runtime_src/core/pcie/driver/linux/xocl/subdev/: accel_deadlock_detector.c  address_translator.c  aim.c  am.c  asm.c  axigate.c  calib_storage.c  cfg_gpio.c  clock_counter.c  clock_wiz.c  command_queue.c  cu.c  ddr_srsr.c  dna.c  ert.c  ert_ctrl.c  ert_user.c  feature_rom.c  firewall.c  flash.c  fmgr.c  hwmon_sdm.c  icap.c  icap_cntrl.c  (+33 more)
src/runtime_src/core/tools/xbflash2/: CMakeLists.txt
src/runtime_src/ert/: CMakeLists.txt  ert.mk
src/runtime_src/tools/scripts/: xrtdeps.sh
src/runtime_src/xocl/: CMakeLists.txt  config.h
src/runtime_src/xocl/api/: api.h  clGetExtensionFunctionAddressForPlatform.cpp  clGetPlatformIDs.cpp
src/runtime_src/xocl/api/icd/: ocl_icd_bindings.h
src/runtime_src/xocl/api/icd/windows/: icd_dispatch.h
(+4 files in other folders)
